--- a/MVP/.classpath
+++ b/MVP/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/MyAlgorithms.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/hibernate"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/connectors"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
