--- a/MVP/.classpath
+++ b/MVP/.classpath
@@ -6,6 +6,10 @@
 	<classpathentry kind="lib" path="lib/MyAlgorithms.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.swt.win32.win32.x86_64_3.103.2.v20150203-1351.jar"/>
 	<classpathentry kind="lib" path="lib/connectors/com.mysql.jdbc_5.1.5.jar"/>
+	<classpathentry kind="lib" path="lib/connectors/sqljdbc.jar"/>
+	<classpathentry kind="lib" path="lib/connectors/sqljdbc4.jar"/>
+	<classpathentry kind="lib" path="lib/connectors/sqljdbc41.jar"/>
+	<classpathentry kind="lib" path="lib/connectors/sqljdbc42.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/hibernate"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate lib"/>
